# quantum_ed

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
demos/: bell_cli.py  bell_state_demo.py  noise_comparison_demo.py
docs/00-intro/: README.md
docs/01-linear-algebra/: README.md
docs/02-qubits-and-states/: README.md
docs/03-measurement/: README.md
docs/04-entanglement/: CHSH.md  README.md
docs/05-circuits-and-gates/: README.md  solutions.md
docs/06-noise-and-channels/: FIDELITY.md  README.md
docs/07-density-matrices/: README.md
docs/08-hardware/: README.md
docs/09-useful-matrices/: README.md
notebooks/: 00-setup.ipynb  01-qubit-bloch.ipynb  02-bell-entanglement.ipynb  03-noise-fidelity.ipynb  04-chsh.ipynb
src/quantum_ed/: __init__.py  channels.py  density.py  gates.py  linalg.py  measurement.py  states.py
src/quantum_ed/viz/: bloch.py
tests/: test_bell_states.py  test_channels.py  test_density.py  test_density_and_channels.py  test_gates.py  test_linalg.py  test_measurement.py  test_states.py
