[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-ed"
version = "0.1.0"
description = "Educational quantum computing toolkit + notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
